[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Asif Rahaman <asifrahaman162@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.0"}
uvicorn = "^0.23.2"
PyJWT = "^2.8.0"
cryptography = "^41.0.4"
python-social-auth = {extras = ["fastapi"], version = "^0.3.6"}
Authlib = "^1.2.1"
jose = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pymongo = "^4.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
